Добавил начальное оформление блоку с информацией

--- a/index.html
+++ b/index.html
@@ -9,21 +9,25 @@
         <meta name="description" content="Сайт портфолио-визитка действующего Frontend разработчика Якимова Ивана">
     </head>
     <body>
-        <img src="images/profile.jpeg" alt="Profile photo" width="240px">
-        <h1> Якимов Иван</h1>
-        <p>
-            Я  являюсь <strong>Frontend разработчиком</strong> и имею опыт разработки на <strong> Vue JS </strong>
-        </p>
-        <p>
-            Я люблю <em>путешествовать, заниматься спортом, играть на гитаре и программировать</em>
-        </p>
-        <h4>Список социальных сетей:</h4>
+        <div class="info">
+            <img src="images/profile.jpeg" alt="Profile photo" width="240px">
+            <div class="info-text">
+                <h1> Якимов Иван</h1>
+                <p>
+                    Я  являюсь <strong>Frontend разработчиком</strong> и имею опыт разработки на <strong> Vue JS </strong>
+                </p>
+                <p>
+                    Я люблю <em>путешествовать, заниматься спортом, играть на гитаре и программировать</em>
+                </p>
+                <h4>Список социальных сетей:</h4>
 
-        <a href="https://vk.com/rykit" target="_blank">VK</a>
-        |
-        <a href="https://t.me/rykit" target="_blank">Telegram</a>
-        |
-        <a href="https://github.com/rykitik" target="_blank">Github</a>
+                <a href="https://vk.com/rykit" target="_blank">VK</a>
+                |
+                <a href="https://t.me/rykit" target="_blank">Telegram</a>
+                |
+                <a href="https://github.com/rykitik" target="_blank">Github</a>
+            </div>
+        </div>
         <h4>Мои хобби</h4>
         <ol>
             <li>Путешествие</li>
