--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Якимов Иван | Frontend разработчик</title>
         <meta name="keywords" content="developer, frontend, vue, vueJS, React, Разработчик, Программист, Фронтенд, JavaScript, резюме, Якимов, Иван, Yakimov, Ivan, resume, cv">
         <meta name="description" content="Сайт портфолио-визитка действующего Frontend разработчика Якимова Ивана">
+        <link rel="stylesheet" href="/styles/style.css">
     </head>
     <body>
         <div class="info">
