--- a/index.html
+++ b/index.html
@@ -29,35 +29,39 @@
                 <a href="https://github.com/rykitik" target="_blank">Github</a>
             </div>
         </div>
-        <h4>Мои хобби</h4>
-        <ol>
-            <li>Путешествие</li>
-            <li>Гитара</li>
-            <li>Бег</li>
-            <li>Муызка</li>
-        </ol>
-        <h4>Опыт работы</h4>
-        <table>
-            <thead>
-                <tr>
-                    <th>Название</th>
-                    <th>Должность</th>
-                    <th>Год</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Rocket Lab</td>
-                    <td>Frontend devoloper</td>
-                    <td>2021-2022</td>
-                </tr>
-                <tr>
-                    <td>InthemeLab</td>
-                    <td>SAP technical support</td>
-                    <td>2022-2023</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="card bg-green">
+            <h4>Мои хобби</h4>
+            <ol>
+                <li>Путешествие</li>
+                <li>Гитара</li>
+                <li>Бег</li>
+                <li>Муызка</li>
+            </ol>
+        </div>
+        <div class="card bg-yellow">
+            <h4>Опыт работы</h4>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Название</th>
+                        <th>Должность</th>
+                        <th>Год</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Rocket Lab</td>
+                        <td>Frontend devoloper</td>
+                        <td>2021-2022</td>
+                    </tr>
+                    <tr>
+                        <td>InthemeLab</td>
+                        <td>SAP technical support</td>
+                        <td>2022-2023</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
         <h2>Связаться со мной</h2>
         <form action="#">
             <label for="name">Ваше имя: </label>
