--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 </tbody>
             </table>
         </div>
+        <div class="card bg-red">
         <h2>Связаться со мной</h2>
         <form action="#">
             <label for="name">Ваше имя: </label>
@@ -72,5 +73,6 @@
             <textarea name="message" id="message" cols="30" rows="10" placeholder="Введите сообщение"></textarea> <br />
             <input type="submit" id="btnSubmit">
         </form>
+    </div>
     </body>
 </html>
