--- a/index.html
+++ b/index.html
@@ -10,69 +10,71 @@
         <link rel="stylesheet" href="./styles/style.css">
     </head>
     <body>
-        <div class="info">
-            <img src="images/profile.jpeg" alt="Profile photo" width="240px">
-            <div class="info-text">
-                <h1> Якимов Иван</h1>
-                <p>
-                    Я  являюсь <strong>Frontend разработчиком</strong> и имею опыт разработки на <strong> Vue JS </strong>
-                </p>
-                <p>
-                    Я люблю <em>путешествовать, заниматься спортом, играть на гитаре и программировать</em>
-                </p>
-                <h4>Список социальных сетей:</h4>
+        <div class="container">
+            <div class="info">
+                <img src="images/profile.jpeg" alt="Profile photo" class="avatar">
+                <div class="info-text">
+                    <h1> Якимов Иван</h1>
+                    <p>
+                        Я  являюсь <strong>Frontend разработчиком</strong> и имею опыт разработки на <strong> Vue JS </strong>
+                    </p>
+                    <p>
+                        Я люблю <em>путешествовать, заниматься спортом, играть на гитаре и программировать</em>
+                    </p>
+                    <h4>Список социальных сетей:</h4>
 
-                <a href="https://vk.com/rykit" target="_blank">VK</a>
-                |
-                <a href="https://t.me/rykit" target="_blank">Telegram</a>
-                |
-                <a href="https://github.com/rykitik" target="_blank">Github</a>
+                    <a href="https://vk.com/rykit" target="_blank">VK</a>
+                    |
+                    <a href="https://t.me/rykit" target="_blank">Telegram</a>
+                    |
+                    <a href="https://github.com/rykitik" target="_blank">Github</a>
+                </div>
+            </div>
+            <div class="card bg-green">
+                <h4>Мои хобби</h4>
+                <ol>
+                    <li>Путешествие</li>
+                    <li>Гитара</li>
+                    <li>Бег</li>
+                    <li>Муызка</li>
+                </ol>
+            </div>
+            <div class="card bg-yellow">
+                <h4>Опыт работы</h4>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Название</th>
+                            <th>Должность</th>
+                            <th>Год</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Rocket Lab</td>
+                            <td>Frontend devoloper</td>
+                            <td>2021-2022</td>
+                        </tr>
+                        <tr>
+                            <td>InthemeLab</td>
+                            <td>SAP technical support</td>
+                            <td>2022-2023</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="card bg-red">
+                <h2>Связаться со мной</h2>
+                <form action="#">
+                    <label for="name">Ваше имя: </label>
+                    <input type="text" name="name" id="name" placeholder="Введите имя"> <br />
+                    <label for="email">Ваш email: </label>
+                    <input type="email" name="email" id="email" placeholder="Введите email"> <br />
+                    <label for="message">Ваше сообщение</label><br />
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Введите сообщение"></textarea> <br />
+                    <input type="submit" id="btnSubmit">
+                </form>
             </div>
         </div>
-        <div class="card bg-green">
-            <h4>Мои хобби</h4>
-            <ol>
-                <li>Путешествие</li>
-                <li>Гитара</li>
-                <li>Бег</li>
-                <li>Муызка</li>
-            </ol>
-        </div>
-        <div class="card bg-yellow">
-            <h4>Опыт работы</h4>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Название</th>
-                        <th>Должность</th>
-                        <th>Год</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Rocket Lab</td>
-                        <td>Frontend devoloper</td>
-                        <td>2021-2022</td>
-                    </tr>
-                    <tr>
-                        <td>InthemeLab</td>
-                        <td>SAP technical support</td>
-                        <td>2022-2023</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="card bg-red">
-        <h2>Связаться со мной</h2>
-        <form action="#">
-            <label for="name">Ваше имя: </label>
-            <input type="text" name="name" id="name" placeholder="Введите имя"> <br />
-            <label for="email">Ваш email: </label>
-            <input type="email" name="email" id="email" placeholder="Введите email"> <br />
-            <label for="message">Ваше сообщение</label><br />
-            <textarea name="message" id="message" cols="30" rows="10" placeholder="Введите сообщение"></textarea> <br />
-            <input type="submit" id="btnSubmit">
-        </form>
-    </div>
     </body>
 </html>
