--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <input type="email" name="email" id="email" placeholder="Введите email"> <br />
                     <label for="message">Ваше сообщение</label><br />
                     <textarea name="message" id="message" cols="30" rows="10" placeholder="Введите сообщение"></textarea> <br />
-                    <input type="submit" id="btnSubmit">
+                    <input type="submit" class="btn" id="btnSubmit">
                 </form>
             </div>
         </div>
