Добавил список с моими курсами

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="card bg-green">
                 <h4>Мои хобби</h4>
-                <ol>
+                <ol class="list">
                     <li>Путешествие</li>
                     <li>Гитара</li>
                     <li>Бег</li>
@@ -64,6 +64,15 @@
                 </table>
             </div>
             <div class="card bg-red">
+                <h4>Мои курсы</h4>
+                <ol class="list">
+                    <li>Яндекс Практикум. Работа с git</li>
+                    <li>Яндекс Практикум. HTML, CSS, JavaScript: вводный модуль </li>
+                    <li>Клиентский сервис в сопровождении клиента
+                        «Бизнес-диалог»</li>
+                </ol>
+            </div>
+            <div class="card">
                 <h2>Связаться со мной</h2>
                 <form action="#">
                     <label for="name">Ваше имя: </label>
