--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="card bg-yellow">
                 <h4>Опыт работы</h4>
-                <table>
+                <table class="table">
                     <thead>
                         <tr>
                             <th>Название</th>
@@ -65,12 +65,12 @@
             </div>
             <div class="card bg-red">
                 <h4>Мои курсы</h4>
-                <ol class="list">
+                <ul class="link-list">
                     <li>Яндекс Практикум. Работа с git</li>
                     <li>Яндекс Практикум. HTML, CSS, JavaScript: вводный модуль </li>
                     <li>Клиентский сервис в сопровождении клиента
                         «Бизнес-диалог»</li>
-                </ol>
+                </ul>
             </div>
             <div class="card">
                 <h2>Связаться со мной</h2>
