--- a/index.html
+++ b/index.html
@@ -72,14 +72,25 @@
                         «Бизнес-диалог»</li>
                 </ul>
             </div>
-            <h2>Связаться со мной</h2>
-            <form action="#">
-                <label for="name">Ваше имя: </label>
-                <input type="text" name="name" id="name" placeholder="Введите имя"> <br />
-                <label for="email">Ваш email: </label>
-                <input type="email" name="email" id="email" placeholder="Введите email"> <br />
-                <label for="message">Ваше сообщение</label><br />
-                <textarea name="message" id="message" cols="30" rows="10" placeholder="Введите сообщение"></textarea> <br />
+            <form action="#" class="form">
+                <h2>Связаться со мной</h2>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="name">Ваше имя: </label>
+                        <input type="text" name="name" id="name" placeholder="Введите имя">
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="email">Ваш email: </label>
+                        <input type="email" name="email" id="email" placeholder="Введите email"> 
+                    </div>
+                </div>
+                
+                <div class="form-group">
+                    <label for="message">Ваше сообщение</label>
+                    <textarea name="message" id="message" cols="20" rows="5" placeholder="Введите сообщение"></textarea>
+                </div>
+
                 <input type="submit" class="btn" id="btnSubmit">
             </form>
         </div>
